--- a/manuscript/supplemental.tex
+++ b/manuscript/supplemental.tex
@@ -14,6 +14,8 @@
 
 \newcommand{\methods}{\textit{Materials \& Methods}}
 \newcommand{\SI}{\textit{Appendix}~}
+\renewcommand{\thefigure}{S\arabic{figure}}
+\renewcommand{\thetable}{S\arabic{table}}
 
 \topmargin -1.5cm % 0.0cm 
 \oddsidemargin 0.0cm % 0.2cm 
@@ -23,20 +25,24 @@
 
 \usepackage{authblk}
 
-\title{Supplemental information}
+\title{A quantitative framework for investigating the reliability of network construction: supplemental information}
 
 
-\author{Authors}
+\author{Alyssa R. Cirtwill$^{1\dagger}$, \&  Anna Ekl\"{o}f$^{1}$, Tomas Roslin$^{2,3}$, Kate Wootton$^{2}$, Dominique Gravel$^{4}$}
 \date{\small$^1$Department of Physics, Chemistry\\ 
 and Biology (IFM)\\ 
 Link\"{o}ping University\\
 Link\"{o}ping, Sweden\\
-% \medskip
-% $^\dagger$ Corresponding author:\\
-% alyssa.cirtwill@gmail.com\\
-% +46 723 158464\\
- }
-
+\medskip $^2$ Department of Ecology\\ P.O. Box 7044, Swedish University of Agricultural Sciences \\ SE-750 07 Uppsala, Sweden \\
+\medskip $^3$ Spatial Foodweb Ecology Group\\ Department of Agricultural Sciences \\ PO Box 27 (Latokartanonkaari 5)\\ FI-00014 University of Helsinki, Finland \\
+\medskip$^4$ D\'{e}partement de biologie\\ 
+Universit\'{e} de Sherbrooke\\ 
+Sherbrooke, Canada\\ 
+\medskip
+$^\dagger$ Corresponding author:\\
+alyssa.cirtwill@gmail.com\\
++46 723 158464\\
+}
 \renewcommand\Authands{ and }
 
 \begin{document} 
@@ -50,12 +56,12 @@ Link\"{o}ping, Sweden\\
   The following simple functions are implemented in the R language. They are 
   also provided as R code in a separate file.
   Priordata is the list of interaction frequencies from the prior 
-  data, n is the number of sites with observed co-occurrence of 
-  species $i$ and $j$, and k is the number of sites with an 
+  data, $n$ is the number of sites with observed co-occurrence of 
+  species $i$ and $j$, and $k$ is the number of sites with an 
   observed interaction $ij$. When calculating the prior 
-  distribution, both n and k are 0. In the main text we assume 100\%
+  distribution, both $n$ and $k$ are 0. In the main text we assume 100\%
   confidence in observed interactions and therefore consider only 
-  cases where k=0. Only n varies between species pairs.
+  cases where $k$=0. Only $n$ varies between species pairs.
 
 
   To calculate the parameters $\alpha$ and $\beta$ of a prior or 
@@ -147,23 +153,17 @@ Link\"{o}ping, Sweden\\
 
       The \emph{Salix}-galler-parasitoid meta-network dataset collected 
       by~\citet{Kopelke2017} consists of a single community type sampled across 
-      Europe: willow (\emph{Salix}) species, willow-galling sawflies (
-      Hymenoptera, Tenthredinidae, Nematinae, Euurina), and their natural 
+      Europe: willow (\emph{Salix}) species, willow-galling sawflies (Hymenoptera, Tenthredinidae, Nematinae, Euurina), and their natural 
       enemies (hymenopteran parasitoids and coleopteran, lepidopteran, dipteran, 
       and hymenopteran inquilines). The data were collected over 29 years 
       (1982-2010) at 374 unique locations across Europe ranging from Sicily to 
       the Arctic. Including repeated visits to a number of sites, the data set 
-      contains 641 site-visits, each of which can be considered as a network in 
-      its own right and an independent sample from which to build the 
-      meta-network. The meta-network consists of 1,173 different interactions 
+      contains 641 site-visits. The meta-network consists of 1,173 different interactions 
       between 52 \emph{Salix} nodes, 92 herbivore nodes, and 126 parasitoid 
       nodes. Interactions were determined by dissecting and rearing gall 
       inhabitants from 165,424 galls. Some sites were visited repeatedly, for a 
       total of 641 site-visits. We consider these to be repeated samples and 
-      take the 374 unique sites as our sample size. The high spatiotemporal 
-      resolution of this network and the unusually high sampling effort together 
-      make this dataset particularly well suited for testing Bayesian approaches 
-      to network structure.
+      take the 374 unique sites as our sample size.
 
 
 \clearpage
@@ -223,7 +223,7 @@ Link\"{o}ping, Sweden\\
 
 \section*{Appendix S4: Analyses using alternative prior}
 
-  We repeated our analyses using an alternative prior derived from a study of a similar \emph{Salix}-galler-natural enemy system in North America~\citep{Barbour2016,Barbour2016Dryad}. We note that this study used several genotypes of \emph{Salix hookeriana} rather than different \emph{Salix} species and so did not produce networks of similar size and connectedness to those in~\citep{Kopelke2016}.  To obtain the priors based on~\citet{Barbour2016}, we estimated frequencies of  \emph{S. hookeriana} genotype-galler interactions based on the normalised degree of each node (species or genotype) in each network component.
+  We repeated our analyses using an alternative prior derived from a study of a similar \emph{Salix}-galler-natural enemy system in North America~\citep{Barbour2016,Barbour2016Dryad}. We note that this study used several genotypes of \emph{Salix hookeriana} rather than different \emph{Salix} species and so did not produce networks of similar size and connectedness to those in~\citep{Kopelke2017}.  To obtain the priors based on~\citet{Barbour2016}, we estimated frequencies of  \emph{S. hookeriana} genotype-galler interactions based on the normalised degree of each node (species or genotype) in each network component.
 
     \subsection*{Creating a binary interaction network}
 
@@ -361,54 +361,55 @@ Link\"{o}ping, Sweden\\
 
     \subsection*{Prior and posterior distributions}
 
-      Using the binary networks described above, we obtained prior parameters $\alpha$=2.51 and $\beta$=1.89 for the \emph{Salix}-galler component and $\alpha$=1.34, $\beta$=9.49 for the galler-natural enemy component of the network. After calculating these prior parameters, we were then able to estimate the posterior distribution of interaction probabilities given the additional information in our dataset.
-      For species where no co-occurrences were observed ($n=0$), we can calculate the estimates for the mean and variance of $\lambda_{ij}$ directly from the prior parameters following equations~\ref{mean} and~\ref{variance} (see \emph{Appendix S1} for R implementation). For the \emph{Salix}-galler network, the prior distribution was: $\bar\lambda$=0.570, var($\lambda$)=0.056. The prior distribution for the galler-natural enemy network was: $\bar\lambda$=0.124, var($\lambda$)=0.010. 
-
-
-      For a pair of species with some observed co-occurrences ($n>0$), we can update the prior distribution with these data. If we consider only pairs of species which were observed to co-occur but not to interact, $k_{ij}$ is always 0 and only $n_{ij}$ will vary between species pairs, giving $\alpha'$=$\alpha$ and $\beta'$=$\beta + n_{ij}$. As the most extreme case, consider a pair of species which co-occurred at all 374 sites and was never observed to interact. Using the priors described above, our distributions would become 
+      Using the binary networks described above, we obtained prior parameters $\alpha$=2.51 and $\beta$=1.89 for the \emph{Salix}-galler component and $\alpha$=1.34, $\beta$=9.49 for the galler-natural enemy component of the network. We then calculated prior distributions using these parameters. For the \emph{Salix}-galler network, the prior distribution was: $\bar\lambda$=0.570, var($\lambda$)=0.056. The prior distribution for the galler-natural enemy network was: $\bar\lambda$=0.124, var($\lambda$)=0.010. As with the results in the main text, we can update this prior distribution using observed co-occurrences. In the most extreme case where a pair of species co-occurred at all 374 sites and was never observed interacting, our distributions would become 
       $\bar\lambda_{ij}$=6.63 $\times$ 10$^{-3}$, var($\lambda_{ij}$)=1.74 $\times$ 10$^{-5}$ for the \emph{Salix}-galler network and 
-      $\bar\lambda_{ij}$=3.49 $\times$ 10$^{-3}$, var($\lambda_{ij}$)=9.03 $\times$ 10$^{-6}$ for the galler-natural enemy network. Distributions for both network components were close to 0 with small variance about our estimate of $\lambda$; species $i$ and $j$ are unlikely to interact at sites or times not included in our sample.
-
+      $\bar\lambda_{ij}$=3.49 $\times$ 10$^{-3}$, var($\lambda_{ij}$)=9.03 $\times$ 10$^{-6}$ for the galler-natural enemy network. 
 
     \subsection*{Credible intervals and sampling requirements}
 
-      For most pairs of species $i$ and $j$, however, $n_{ij}$ was much less than 374 and our posterior mean and variance therefore retain more of the influence of the prior. We can see this in the increasing means and variances as we decrease $n_{ij}$ (Fig.~\ref{Salix_pdfs}). The 95\% credible interval around the estimate of $\lambda$ also widens as $n_{ij}$ decreases, from (0.001, 0.017) and (\textless0.001, 0.11) for hypothetical \emph{Salix}-galler and galler-natural enemy pairs that might be observed co-occurring at all 374 sites without any observed interaction to (0.152,0.931) and (0.008, 0.364) for \emph{Salix}-galler and galler-natural enemy pairs that were never observed co-occurring.
+      The 95\% credible intervals calculated using the priors derived from~\citet{Barbour2016} were much wider than those reported in the main text (Fig.~\ref{Salix_pdfs}). For hypothetical \emph{Salix}-galler and galler-natural enemy pairs these intervals widened from (0.001, 0.017) and (\textless0.001, 0.11) for pairs observed co-occurring at all 374 sites without any observed interaction to (0.152,0.931) and (0.008, 0.364) for \emph{Salix}-galler and galler-natural enemy pairs that were never observed co-occurring.
 
 
-      If we want to be 95\% confident that the interaction probability for two species in the \emph{Salix}-galler network is below 0.1, 0.05, or 0.01, we would need 51, 106, and 550 observed co-occurrences with no observed interaction, respectively (Fig.~\ref{Salix_cdfs}; see function samples\_for\_threshold in~\emph{Appendix S1}). The number of samples required to be 95\% confident that the interaction probability between galler and natural enemy species is below a threshold also increases quickly as the threshold decreases; we would need 25, 62, and 352 observed co-occurrence with no observed interaction for threshold interaction probabilities of 0.1, 0.05, and 0.01, respectively. 
+      \begin{figure}[h!]
+        \caption{Using prior distribution based on the \emph{Salix}-galler and galler-natural enemy networks in~\citet{Barbour2016}, we can calculate posterior distributions for the probability of interaction ($\lambda$) between two species that have not yet been observed interacting. Here we show posterior distributions for each $\lambda$ in each network ranging from the prior distribution ($n=0$ observed co-occurrence) to the distribution obtained when the pair of species has been observed co-occurring 100 times. The distribution narrows and approaches zero as the sample size increases. Likewise, the maximum likelihood estimator for the mean probability of interaction (diamonds at top of each panel) approaches zero and the 95\% credible interval (lines at top of each panel) narrows as sample size increases. \textbf{A)} The posterior distributions for the \emph{Salix}-galler component are always wider and farther from zero than those for \textbf{B)} the galler-natural enemy component. This is likely because the prior distribution for the galler-natural enemy component of the network was both narrower and had a mean closer to that in the~\citet{Kopelke2017} data than did the \emph{Salix}-galler component.}
+        \label{Salix_pdfs}
+        \begin{center}
+        \includegraphics*[width=.6\textwidth]{figures/Salix_Galler_pdfs_increasing_N.eps}
+        \end{center}
+        \end{figure}
+
+
+      If we want to be 95\% confident that the interaction probability for two species in the \emph{Salix}-galler network is below 0.1, 0.05, or 0.01, we would need 51, 106, and 550 observed co-occurrences with no observed interaction, respectively (Fig.~\ref{Salix_cdfs}). The number of samples required to be 95\% confident that the interaction probability between galler and natural enemy species is below a threshold also increases quickly as the threshold decreases; we would need 25, 62, and 352 observed co-occurrence with no observed interaction for threshold interaction probabilities of 0.1, 0.05, and 0.01, respectively. 
+
+
+      \begin{figure}[h!]
+        \caption{The number of samples required to achieve a given level of confidence that an interaction probability $\lambda_{ij}$ is below a given threshold varies with both parameters. With a low threshold, our confidence that $\lambda_{ij}$ is below the threshold increases rapidly with repeated observation of co-occurrence without interaction. Here we show the cumulative density functions for threshold probabilities of 0.5 (solid line), 0.25 (dashed line), 0.1 (dash-dot line), and 0.05 (dotted line) as well as the points at which the cdf reaches 0.90 (orange square), 0.95 (red circle), and 0.975 (blue diamond) for each threshold value. The large ticks along the x-axis indicate the number of samples associated with each of these points. Note that the number of samples required to reach any given threshold is larger for \textbf{A)} the \emph{Salix}-galler network than for \textbf{B)} the galler-natural enemy network. In the galler-natural enemy network, the credible interval for a pair of species with no observed co-occurrences was 0.364. All pairs of species therefore have $\lambda$\textless0.5.}
+        \label{Salix_cdfs}
+        \begin{center}
+        \includegraphics[width=.6\textwidth]{figures/Salix_Galler_samples_and_cdfs.eps}
+        \end{center}
+        \end{figure}
 
 
     \subsection*{Scaling up to network metrics}
 
 
-      We find, perhaps not surprisingly, that the posterior webs for the Salix-galler network all had much higher connectance than the original, observed web (C=0.028 for the observed web and 0.528$\leq$C$\leq$0.568 for the posterior webs; Fig.~\ref{posterior_webs}A). Likewise, the number of links per \emph{Salix} and galler species in the observed web ($L_{\emph{Salix}}$=2.71 and $L_{galler}$=1.47, respectively) were much lower than those predicted in the posterior webs (27.4$\leq L_{\emph{Salix}} \leq$29.5 and 50.6$\leq L_{galler} \leq $54.5, respectively; Fig.~\ref{posterior_webs}C,E), even when filtering with a detection probability of only 50\%. Nestedness was also much higher in the posterior networks (14.2 $\leq NODF \leq$ 15.4; Fig.~\ref{posterior_webs}G) than in the observed network (NODF=0.560). There are two possible explanations for these discrepancies: either the data of~\citet{Barbour2016} is simply too different from that of~\citet{Kopelke2017} to offer an appropriate prior for our dataset, or the true detection probability for links between \emph{Salix} and galler species is much less than 50\%. As the scale of the two datasets is quite different (genotypes of a single \emph{Salix} species in~\citet{Barbour2016}, various \emph{Salix} species in our dataset), we suspect the former is more likely.
+      We find, perhaps not surprisingly, that the posterior webs for the Salix-galler network all had much higher connectance than the original, observed web (C=0.028 for the observed web and 0.528 $\leq$ C $\leq$ 0.568 for the posterior webs; Fig.~\ref{posterior_webs}A). Likewise, the number of links per \emph{Salix} and galler species in the observed web ($L_{\emph{Salix}}$=2.71 and $L_{galler}$=1.47, respectively) were much lower than those predicted in the posterior webs (27.4 $\leq L_{\emph{Salix}} \leq$ 29.5 and 50.6 $\leq L_{galler} \leq $54.5, respectively; Fig.~\ref{posterior_webs}C,E), even when filtering with a detection probability of only 50\%. Nestedness was also much higher in the posterior networks (14.2 $\leq NODF \leq$ 15.4; Fig.~\ref{posterior_webs}G) than in the observed network (NODF=0.560). There are two possible explanations for these discrepancies: either the data of~\citet{Barbour2016} is simply too different from that of~\citet{Kopelke2017} to offer an appropriate prior for our dataset, or the true detection probability for links between \emph{Salix} and galler species is much less than 50\%. As the scale of the two datasets is quite different (genotypes of a single \emph{Salix} species in~\citet{Barbour2016}, various \emph{Salix} species in our dataset), we suspect the former is more likely.
 
 
-      Considering the galler-natural enemy networks, the connectance, mean links per galler, and mean links per natural enemy were also much lower in the observed web (C=0.078, $L_{galler}$=9.99, and $L_{natural enemy}$=7.45, respectively) than in the posterior webs (0.183$\leq$ C $\leq$ 0.196, 17.5 $\leq L_{galler} \leq$ 18.9, and 23.0 $\leq L_{natural enemy} \leq$ 24.8). When the detection probability was relatively low (i.e., 50\%), however, the properties of randomised networks became similar to those in the observed webs (Fig.~\ref{posterior_webs}B,D,F). Nestedness was higher in the observed network (NODF=6.85) than in the posterior networks (6.30 $\leq NODF \leq$ 6.74; Fig.~\ref{posterior_webs}H), but network structure was much more similar in the observed and posterior galler-natural enemy networks than in the \emph{Salix}-galler networks. The~\citet{Barbour2016} network likely provides a better prior here than for the \emph{Salix}-galler networks, as both networks included different galler and natural enemy species. Although the two networks differ vastly in scale, and the inclusion of multiple \emph{Salix} species likely causes structural differences from~\citet{Barbour2016} despite the similar resolution of gallers and natural enemies, this result nevertheless suggests that even such a large and well-replicated network as that in~\citet{Kopelke2017} is missing many interactions. This should be a strong warning to researchers comparing structural characteristics between networks - small structural differences are likely to be masked by substantial noise resulting from sampling uncertainty.
+      Considering the galler-natural enemy networks, the connectance, mean links per galler, and mean links per natural enemy were also much lower in the observed web (C=0.078, $L_{galler}$=9.99, and $L_{natural enemy}$=7.45, respectively) than in the posterior webs (0.183 $\leq$ C $\leq$ 0.196, 17.5 $\leq L_{galler} \leq$ 18.9, and 23.0 $\leq L_{natural enemy} \leq$ 24.8). When the detection probability was relatively low (i.e., 50\%), however, the properties of randomised networks became similar to those in the observed webs (Fig.~\ref{posterior_webs}B,D,F). Nestedness was higher in the observed network (NODF=6.85) than in the posterior networks (6.30 $\leq NODF \leq$ 6.74; Fig.~\ref{posterior_webs}H), but network structure was much more similar in the observed and posterior galler-natural enemy networks than in the \emph{Salix}-galler networks. The~\citet{Barbour2016} network likely provides a better prior here than for the \emph{Salix}-galler networks, as both networks included different galler and natural enemy species. Although the two networks differ vastly in scale, and the inclusion of multiple \emph{Salix} species likely causes structural differences from~\citet{Barbour2016} despite the similar resolution of gallers and natural enemies, this result nevertheless suggests that even such a large and well-replicated network as that in~\citet{Kopelke2017} is missing many interactions. This should be a strong warning to researchers comparing structural characteristics between networks - small structural differences are likely to be masked by substantial noise resulting from sampling uncertainty.
 
-
-      \begin{figure}[ht]
-        \caption{Using prior distribution based on the \emph{Salix}-galler and galler-natural enemy networks in~\citet{Barbour2016}, we can calculate posterior distributions for the probability of interaction ($\lambda$) between two species that have not yet been observed interacting. Here we show posterior distributions for each $\lambda$ in each network ranging from the prior distribution ($n=0$ observed co-occurrence) to the distribution obtained when the pair of species has been observed co-occurring 100 times. The distribution narrows and approaches zero as the sample size increases. Likewise, the maximum likelihood estimator for the mean probability of interaction (diamonds at top of each panel) approaches zero and the 95\% credible interval (lines at top of each panel) narrows as sample size increases. \textbf{A)} The posterior distributions for the \emph{Salix}-galler component are always wider and farther from zero than those for \textbf{B)} the galler-natural enemy component. This is likely because the prior distribution for the galler-natural enemy component of the network was both narrower and had a mean closer to that in the~\citet{Kopelke2017} data than did the \emph{Salix}-galler component.}
-        \label{Salix_pdfs}
-        \includegraphics*[width=.8\textwidth]{figures/Salix_Galler_pdfs_increasing_N.eps}
-        \end{figure}
-
-
-
-      \begin{figure}[ht]
-        \caption{The number of samples required to achieve a given level of confidence that an interaction probability $\lambda_{ij}$ is below a given threshold varies with both parameters. With a low threshold, our confidence that $\lambda_{ij}$ is below the threshold increases rapidly with repeated observation of co-occurrence without interaction. Here we show the cumulative density functions for threshold probabilities of 0.5 (solid line), 0.25 (dashed line), 0.1 (dash-dot line), and 0.05 (dotted line) as well as the points at which the cdf reaches 0.90 (orange square), 0.95 (red circle), and 0.975 (blue diamond) for each threshold value. The large ticks along the x-axis indicate the number of samples associated with each of these points. Note that the number of samples required to reach any given threshold is larger for \textbf{A)} the \emph{Salix}-galler network than for \textbf{B)} the galler-natural enemy network. In the galler-natural enemy network, the credible interval for a pair of species with no observed co-occurrences was 0.364. All pairs of species therefore have $\lambda$\textless0.5.}
-        \label{Salix_cdfs}
-        \includegraphics[width=.8\textwidth]{figures/Salix_Galler_samples_and_cdfs.eps}
-
-        \end{figure}
 
 
       \begin{figure}[ht]
       \caption{Here we show the mean connectance, links per resource (\emph{Salix} in the \emph{Salix}-galler networks and gallers in the galler-natural enemy networks), links per consumer, and nestedness (NODF) for networks assembled using posterior distributions based on a smaller, North American \emph{Salix}-galler-natural enemy system~\citep{Barbour2016,Barbour2016Dryad}. We created 100 ``posterior-sampling" networks and then, for each of these, created 100 ``detection-filter" networks by randomly sampling 50\%-99\% of the interactions included in the posterior-sampling network. This simulates imperfect detection of interactions in the field. Each point represents the mean network property (e.g., connectance) obtained from a set of 100 detection-filter networks, plotted against the value of the network property in the posterior-sampling network used to create the detection-filter networks. For each property and both network types, the posterior-sampling networks cover a relatively small range of network properties than the range covered by networks with varying detection probabilities. The value of each property decreases with the proportion of links included in the detection-filter networks.}
       \label{posterior_webs}    
-      \includegraphics[width=.8\textwidth]{Figures/Salix_Galler_posterior_properties.eps}
+      \begin{center}
+      \includegraphics[width=.6\textwidth]{Figures/Salix_Galler_posterior_properties.eps}
+      \end{center}
       \end{figure}
 
+  \clearpage
 
     \bibliographystyle{ecollett} 
     \bibliography{MyCollection}
